objects/HistoricalApplicationSum__c.object
<CustomObject>
    <fields>
        <fullName>Last_7_Days_Funded_Won_Amount__c</fullName>
        <label>Last 7 Days Funded Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Day_Funded_Total__c</fullName>
        <label>7 Day Funded Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Day_Submission_Total__c</fullName>
        <label>7 Day Submission Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HistoricalApplicationSum</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X5_Day_Funded_Total__c</columns>
        <columns>X5_Day_Submission_Total__c</columns>
        <columns>Last_7_Days_Funded_Won_Amount__c</columns>
        <columns>Report_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HA-{00000000}</displayFormat>
        <label>HistoricalApplicationSum Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HistoricalApplicationSums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>